# RBC-GEM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .standard-GEM.md  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  README.md  index.html  memote.ini
.deprecated/: README.md
.github/: CONTRIBUTING.md  README.md  (+1 more)
code/: README.md  pyproject.toml
code/notebooks/: AnnotateModel_RBC-GEM.ipynb  ModelConnectivityOverview.ipynb  ModelContentOverview_RBC-GEM.ipynb  VisualizeEvidenceGenes_RBC-GEM.ipynb  VisualizeFullNetwork.ipynb
code/notebooks/analysis/: ModelConnectivityOverview.ipynb  ModelContentOverview.ipynb  VisualizeEvidenceGenes.ipynb  VisualizeFullNetwork.ipynb
code/notebooks/analysis/OVERLAY/: 0. Prepare proteomic data - RBC Omics.ipynb  0. Prepare proteomic data - REDS RBC Omics.ipynb  1. Derive base model.ipynb  2. Derive PC-Model.ipynb  3. Explore proteins and complexes.ipynb  4. Create context-specific models from proteomics.ipynb  4a. Create context-specific models - REDS RBC Omics.ipynb  4a. Create context-specific models from REDS RBC Omics.ipynb  4b. Create context-specific models - Mouse G6PD Variants Omics.ipynb  4b. Create context-specific models from Mouse G6PD Variants Omics.ipynb  4c. Create context-specific models - DeepRed Omics.ipynb  4c. Create context-specific models from DeepRed Omics.ipynb  5. Analyze models using pcFVA.ipynb  5. Simulate models using pcFVA.ipynb  5a. Simulate models using pcFVA - REDS RBC Omics.ipynb  5b. Simulate models using pcFVA  - Mouse G6PD Variants Omics.ipynb  5c. Simulate models using pcFVA - DeepRed Omics.ipynb  6. Compute correlations with metadata.ipynb  7. Derive representative PC-Model.ipynb
code/notebooks/analysis/OVERLAY/DeepRed Case Studies/: G6PD simulations.ipynb  GPX4 simulations.ipynb  PCMT1 simulations.ipynb
code/notebooks/analysis/OVERLAY/Human/: 1_DeriveBaseModel.ipynb  2_DerivePCModel.ipynb  3_ExploreProteinsComplexes.ipynb
code/notebooks/analysis/OVERLAY/Mouse/: 1_DeriveBaseModel.ipynb  2_DerivePCModel.ipynb  3_ExploreProteinsComplexes.ipynb
code/notebooks/annotation/: AnnotateModel.ipynb  AnnotateModel_RBC-GEM.ipynb  ExtractAnnotations_DrugBank.ipynb  ExtractAnnotations_MIM.ipynb  ExtractAnnotations_MetAtlas.ipynb  ExtractAnnotations_Model.ipynb  ExtractAnnotations_RBC-GEM.ipynb  ExtractAnnotations_UniProt.ipynb  ExtractDataAnnotations_ComplexPortal.ipynb  ExtractDataAnnotations_DrugCentral.ipynb  ExtractDataAnnotations_MIM.ipynb  ExtractDataAnnotations_TCDB.ipynb  ExtractDataAnnotations_UniProt.ipynb  HarmonizeAnnotations.ipynb  HarmonizeAnnotations_RBC-GEM.ipynb  README.md  ReconcileAnnotations_RBC-GEM.ipynb
code/notebooks/curation/: ExtractAnnotations_UniProt_RBC-GEM_v0.2.0.ipynb  ExtractIdentifiersHumanGEM.ipynb  IdentifierUpdates_Proteomics.ipynb  ModelComparison.ipynb  ModelConnectivityComparison.ipynb  RBC-GEM_v0.1.1_v0.2.0.ipynb  RBC-GEM_v0.2.0_v0.3.0.ipynb  RBC-GEM_v0.3.0_v1.0.0.ipynb  RBC-GEM_v1.0.0_v1.1.0.ipynb  RBC-GEM_v1.1.0_v1.2.0.ipynb  RBC-GEM_v1.2.0_v1.3.0.ipynb  README.md  ReconcileAnnotations_RBC-GEM_v0.2.0.ipynb
code/notebooks/data/: AggregateData_Network.ipynb  AggregateData_Proteomics.ipynb  EvidenceGenes_RBC-GEM.ipynb  EvidenceTables_RBC-GEM.ipynb  ExtractAll_DrugBank.ipynb  ExtractData_ENZYME.ipynb  ExtractData_dbSNP.ipynb  ExtractDrugCombinations_CDCDB.ipynb  ExtractDrugData_DrugBank.ipynb  ExtractMetaData_PubMed.ipynb  IdentifierUpdates_Proteomics.ipynb  TablesEvidence.ipynb
code/notebooks/data/proteomics/: Prepare proteomic data - DeepRed.ipynb  Prepare proteomic data - Mouse G6PDvariants.ipynb  Prepare proteomic data - Mouse G6PDvariants1.ipynb  Prepare proteomic data - REDS RBC Omics.ipynb  PrepareProteomics_CopyNumbers_Human_DeepRed.ipynb  PrepareProteomics_Intensities_Human_REDS_RBCOmics.ipynb  PrepareProteomics_Intensities_Mouse_G6PDvariants.ipynb
code/notebooks/database/: AnnotateExtract_Model.ipynb  ExtractAnnotationsData_ComplexPortal.ipynb  ExtractAnnotationsData_DrugBank.ipynb  ExtractAnnotationsData_DrugCentral.ipynb  ExtractAnnotationsData_MGI.ipynb  ExtractAnnotationsData_MIM.ipynb  ExtractAnnotationsData_TCDB.ipynb  ExtractAnnotationsData_UniProt.ipynb  ExtractAnnotations_MetAtlas.ipynb  ExtractData_CDCDB.ipynb  ExtractData_ENZYME.ipynb  ExtractData_PubMed.ipynb  ExtractData_dbSNP.ipynb  HarmonizeAnnotations.ipynb  README.md
code/notebooks/studies/rbc1/: Fig1_Curation.ipynb  Fig2b_ModelComparison.ipynb  Fig3_VisualizeEvidenceGenes.ipynb  Fig4_ModelContentOverview.ipynb
code/src/rbc_gem_utils/: __init__.py  annotation.py  io.py  qc.py  table.py  util.py  visualization.py
code/src/rbc_gem_utils/analysis/: __init__.py  overlay.py
code/src/rbc_gem_utils/database/: __init__.py  complexportal.py  drugbank.py  ec.py  metatlas.py  mgi.py  mim.py  pubmed.py  reactome.py  tcdb.py  uniprot.py
code/studies/: README.md
(+224 files in other folders)
