title = "RBC-GEM TOML configuration file"


################################################################################
# Build tools configuration                                                    #
################################################################################

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "rbc_gem_utils.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

################################################################################
# Project configuration                                                        #
################################################################################
[project]
name = "rbc_gem_utils"
dependencies = [
  "Bio",
  "beautifulsoup4",
  "cobra",
  "scipy",
  "memote",
  "pandas",
  "openpyxl",
  "notebook",
  "depinfo",
  "pre-commit",
  "networkx",
  "gurobipy",
  "seaborn",
  "scikit-learn",
  "matplotlib",
  "matplotlib_venn",
]
requires-python = ">=3.8"
authors = [
  {name = "Zachary B. Haiman"},
]
maintainers = [
  {name = "Zachary B. Haiman"},
]
description = "Source code for working with the RBC-GEM reconstruction."
keywords = ["python", "red blood cell", "erythrocyte"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
overlay = ["gurobipy"]
database = ["beautifulsoup4", "requests", "Bio"]
all = ["rbc_gem_utils[database,vis,network]"]

[project.urls]
"MEMOTE Report" = "https://z-haiman.github.io/RBC-GEM/"
Repository = "https://github.com/z-haiman/RBC-GEM.git"
"Bug Tracker" = "https://github.com/z-haiman/RBC-GEM/issues"
Changelog = "https://github.com/z-haiman/RBC-GEM/blob/main/HISTORY.md"


################################################################################
# Lint tools configuration                                                     #
################################################################################

[tool.black]
line-length = 88
python-version = [
    "py38",
    "py39",
    "py39",
    "py310",
    "py311",
]



[tool.isort]
profile = "black"
src_paths = [
    "src/rbc_gem_utils"
]
indent = 4
lines_after_imports = 2
